--- a/tests/integration/extensions/cassettes/test_lm_eval/TestLMEval.test_generate_until.yaml
+++ b/tests/integration/extensions/cassettes/test_lm_eval/TestLMEval.test_generate_until.yaml
@@ -12,45 +12,46 @@ interactions:
     uri: https://api.com/v2/models/google%2Fflan-t5-xl?version=2024-01-30
   response:
     body:
-      string: '{"result":{"id":"google/flan-t5-xl","name":"flan-t5-xl","developer":"Google","size":"3B","label":"flan-t5-xl
+      string: '{"result":{"id":"google/flan-t5-xl","name":"flan-t5-xl","developer":"google","size":"3B","label":"flan-t5-xl
         (3B)","disabled":false,"preferred":true,"description":"flan-t5-xl (3B) is
         a 3 billion parameter model based on the Flan-T5 family. It is a pretrained
         T5: an encoder-decoder model pre-trained on a mixture of supervised / unsupervised
         tasks converted into a text-to-text format, and fine-tuned on the Fine-tuned
         LAnguage Net ([FLAN](https://arxiv.org/pdf/2109.01652.pdf)) with instructions
-        for better zero-shot and few-shot performance.\n\n- Repository: [google-research/t5x](https://github.com/google-research/t5x)\n-
+        for better zero-shot and few-shot performance. \n\n- Tasks: Question answering,
+        Summarization, Retrieval-Augmented Generation, Classification, Generation,
+        Extraction\n- Limitations: Fine-tuned on data which was not filtered for safety
+        and fairness.\n- Languages: English, Spanish, Japanese, Persian, Hindi, [view
+        all 60...](https://huggingface.co/google/flan-t5-xl)\n- License: [Apache 2.0](https://www.apache.org/licenses/LICENSE-2.0.txt)\n-
+        Repository: [google-research/t5x](https://github.com/google-research/t5x)\n-
         Paper: [Scaling Instruction-Finetuned Language Models](https://arxiv.org/abs/2210.11416)\n-
-        More Information: [from Huggingface](https://huggingface.co/google/flan-t5-xl)\n-
-        License: [Apache 2.0](https://www.apache.org/licenses/LICENSE-2.0.txt)\n-
-        Intended Use: \n    - Research on zero-shot or in-context few-shot learning
-        NLP tasks such as reasoning or question answering.\n    - Research on understanding
-        limitations of current large language models.\n- Risks and Limitations:\n    -
-        Fine-tuned on data which was not filtered for safety and fairness.\n    -
-        The model covers 60 languages. ","tags":["soon_in_watsonx"],"facets":[{"id":"DEV-test","name":"DEV
-        TEST","type":"model_type"},{"id":"English","name":"English","type":"language"}],"source_model_id":null,"is_live":true,"token_limits":[{"beam_width":0,"token_limit":4096}],"tasks":[{"id":"generation","name":"Generation","json_example":"[\n  {\n    \"input\":
+        More Information: [from Huggingface](https://huggingface.co/google/flan-t5-xl)","tags":["in_watsonx"],"facets":[{"id":"multilingual","name":"Multilingual","type":"language"},{"id":"encoder-decoder","name":"Encoder-decoder","type":"model_type"}],"source_model_id":null,"is_live":true,"token_limits":[{"beam_width":0,"token_limit":4096}],"tasks":[{"id":"summarization","name":"Summarization","json_example":"[\n  {\n    \"input\":
         \"<text>\",\n    \"output\": \"<text>\"\n  },\n  {\n    \"input\": \"<text>\",\n    \"output\":
-        \"<text>\"\n  },\n  {\n    \"input\": \"<text>\",\n    \"output\": \"<text>\"\n  }\n]","jsonl_example":"{\"input\":\"<text>\",\"output\":\"<text>\"}\n{\"input\":\"<text>\",\"output\":\"<text>\"}\n{\"input\":\"<text>\",\"output\":\"<text>\"}","csv_example":"input,output\n<text>,<text>\n<text>,<text>\n<text>,<text>","verbalizer":"{{input}}","file_format_id":1,"tune":true,"categorization":true},{"id":"summarization","name":"Summarization","json_example":"[\n  {\n    \"input\":
+        \"<text>\"\n  },\n  {\n    \"input\": \"<text>\",\n    \"output\": \"<text>\"\n  }\n]","jsonl_example":"{\"input\":\"<text>\",\"output\":\"<text>\"}\n{\"input\":\"<text>\",\"output\":\"<text>\"}\n{\"input\":\"<text>\",\"output\":\"<text>\"}","csv_example":"input,output\n<text>,<text>\n<text>,<text>\n<text>,<text>","verbalizer":"{{input}}","file_format_id":1,"tune":true,"categorization":true},{"id":"generation","name":"Generation","json_example":"[\n  {\n    \"input\":
         \"<text>\",\n    \"output\": \"<text>\"\n  },\n  {\n    \"input\": \"<text>\",\n    \"output\":
-        \"<text>\"\n  },\n  {\n    \"input\": \"<text>\",\n    \"output\": \"<text>\"\n  }\n]","jsonl_example":"{\"input\":\"<text>\",\"output\":\"<text>\"}\n{\"input\":\"<text>\",\"output\":\"<text>\"}\n{\"input\":\"<text>\",\"output\":\"<text>\"}","csv_example":"input,output\n<text>,<text>\n<text>,<text>\n<text>,<text>","verbalizer":"{{input}}","file_format_id":1,"tune":true,"categorization":true},{"id":"classification","name":"Classification","json_example":"[\n  {\n    \"input\":
+        \"<text>\"\n  },\n  {\n    \"input\": \"<text>\",\n    \"output\": \"<text>\"\n  }\n]","jsonl_example":"{\"input\":\"<text>\",\"output\":\"<text>\"}\n{\"input\":\"<text>\",\"output\":\"<text>\"}\n{\"input\":\"<text>\",\"output\":\"<text>\"}","csv_example":"input,output\n<text>,<text>\n<text>,<text>\n<text>,<text>","verbalizer":"{{input}}","file_format_id":1,"tune":true,"categorization":true},{"id":"prompt-tuning","name":"Prompt
+        Tuning","jsonl_example":"undefined\nundefined\nundefined","csv_example":"undefined\nundefined\nundefined\nundefined","tune":false,"categorization":false},{"id":"classification","name":"Classification","json_example":"[\n  {\n    \"input\":
         \"<text>\",\n    \"output\": \"<text>\"\n  },\n  {\n    \"input\": \"<text>\",\n    \"output\":
         \"<text>\"\n  },\n  {\n    \"input\": \"<text>\",\n    \"output\": \"<text>\"\n  }\n]","jsonl_example":"{\"input\":\"<text>\",\"output\":\"<text>\"}\n{\"input\":\"<text>\",\"output\":\"<text>\"}\n{\"input\":\"<text>\",\"output\":\"<text>\"}","csv_example":"input,output\n<text>,<text>\n<text>,<text>\n<text>,<text>","verbalizer":"classify
-        { \"label 1\", \"label 2\" } Input: {{input}} Output:","file_format_id":1,"tune":true,"categorization":true},{"id":"prompt-tuning","name":"Prompt
-        Tuning","jsonl_example":"undefined\nundefined\nundefined","csv_example":"undefined\nundefined\nundefined\nundefined","tune":false,"categorization":false}],"model_family":{"id":7,"name":"FLAN-T5"}}}'
+        { \"label 1\", \"label 2\" } Input: {{input}} Output:","file_format_id":1,"tune":true,"categorization":true}],"model_family":{"id":3,"name":"FLAN-T5"}}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 17 Apr 2024 08:33:01 GMT
-      Keep-Alive:
-      - timeout=72
-      Transfer-Encoding:
-      - chunked
+      cache-control:
+      - private
       content-length:
-      - '3474'
+      - '3462'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-01-30'
+      date:
+      - Mon, 17 Jun 2024 07:42:28 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=7db5985d881384cdbd63030fb254fd5c; path=/;
+        HttpOnly; Secure; SameSite=None
+      transfer-encoding:
+      - chunked
       vary:
       - accept-encoding
       x-ratelimit-limit:
@@ -75,20 +76,23 @@ interactions:
     uri: https://api.com/v2/text/generation/limits?version=2023-11-22
   response:
     body:
-      string: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
+      string: '{"result":{"concurrency":{"limit":10,"remaining":9}}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 17 Apr 2024 08:33:02 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
-      - '54'
+      - '53'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Mon, 17 Jun 2024 07:42:29 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=f94477c93d7e7954e5f4e4d7bcdc18d7; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
     status:
@@ -114,21 +118,19 @@ interactions:
     uri: https://api.com/v2/text/generation?version=2024-03-19
   response:
     body:
-      string: '{"id":"f3d499e8-3fe4-46f1-8bd2-cca3f8cc2ea4","model_id":"google/flan-t5-xl","created_at":"2024-04-17T08:33:03.255Z","results":[{"generated_text":"My
+      string: '{"id":"33b43c08-4712-48ef-a8f2-91df107ba281","model_id":"google/flan-t5-xl","created_at":"2024-06-17T07:42:29.507Z","results":[{"generated_text":"My
         favorite color is blue.","generated_token_count":6,"input_token_count":11,"stop_reason":"stop_sequence","stop_sequence":"."}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 17 Apr 2024 08:33:03 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
       - '275'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-03-19'
+      date:
+      - Mon, 17 Jun 2024 07:42:29 GMT
+      keep-alive:
+      - timeout=72
       vary:
       - accept-encoding
     status:
@@ -154,21 +156,19 @@ interactions:
     uri: https://api.com/v2/text/generation?version=2024-03-19
   response:
     body:
-      string: '{"id":"9ce1161d-f523-455f-9148-bbf2f74373d6","model_id":"google/flan-t5-xl","created_at":"2024-04-17T08:33:03.559Z","results":[{"generated_text":"I
+      string: '{"id":"ebcc2ad5-0372-4188-903c-b66cb72405a7","model_id":"google/flan-t5-xl","created_at":"2024-06-17T07:42:29.741Z","results":[{"generated_text":"I
         like to read books.","generated_token_count":6,"input_token_count":14,"stop_reason":"stop_sequence","stop_sequence":"."}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 17 Apr 2024 08:33:03 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
       - '270'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-03-19'
+      date:
+      - Mon, 17 Jun 2024 07:42:29 GMT
+      keep-alive:
+      - timeout=72
       vary:
       - accept-encoding
     status:
@@ -187,20 +187,23 @@ interactions:
     uri: https://api.com/v2/text/generation/limits?version=2023-11-22
   response:
     body:
-      string: '{"result":{"concurrency":{"limit":10,"remaining":10}}}'
+      string: '{"result":{"concurrency":{"limit":10,"remaining":9}}}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 17 Apr 2024 08:33:04 GMT
-      Keep-Alive:
-      - timeout=72
+      cache-control:
+      - private
       content-length:
-      - '54'
+      - '53'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2023-11-22'
+      date:
+      - Mon, 17 Jun 2024 07:42:30 GMT
+      keep-alive:
+      - timeout=72
+      set-cookie:
+      - 2eef5f4c257f6bca76e8da5586743beb=5d7e6c4c9f4b0936ffdaf6baf9397e96; path=/;
+        HttpOnly; Secure; SameSite=None
       vary:
       - accept-encoding
     status:
@@ -226,21 +229,19 @@ interactions:
     uri: https://api.com/v2/text/generation?version=2024-03-19
   response:
     body:
-      string: '{"id":"df94456a-b066-4dfb-a065-a46b56f66296","model_id":"google/flan-t5-xl","created_at":"2024-04-17T08:33:04.703Z","results":[{"generated_text":"I
+      string: '{"id":"1bd2ffd3-7daa-4312-b680-1144ab623965","model_id":"google/flan-t5-xl","created_at":"2024-06-17T07:42:30.508Z","results":[{"generated_text":"I
         got a new job.","generated_token_count":7,"input_token_count":12,"stop_reason":"stop_sequence","stop_sequence":"."}]}'
     headers:
-      Connection:
-      - keep-alive
-      Date:
-      - Wed, 17 Apr 2024 08:33:04 GMT
-      Keep-Alive:
-      - timeout=72
       content-length:
       - '265'
       content-type:
       - application/json; charset=utf-8
       content-version:
       - '2024-03-19'
+      date:
+      - Mon, 17 Jun 2024 07:42:30 GMT
+      keep-alive:
+      - timeout=72
       vary:
       - accept-encoding
     status:
